--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,52 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+
+
+.start > button{
+
+ border: none;
+ background-color: rgb(163, 106, 0);
+ padding: 20px;
+ border-radius: 20px;
+ font-family: 'Press Start 2P', cursive;
+ font-size: 1rem;
+ border: 8px solid black;
+
+}
+
+
+
+@media (min-width: 481px) and (max-width: 1200px) {
+  .btn {
+    margin: 18px;
+    display: inline-block;
+    height: 120px;
+    width: 120px;
+    border: 10px solid black;
+    border-radius: 20%;
+  }
+  .start > button{
+
+    border: none;
+    background-color: rgb(163, 106, 0);
+    padding: 10px;
+    border-radius: 10px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 0.5rem;
+    border: 8px solid black;
+  }   
+
+  #level-title {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 1.5rem;
+    margin:  5%;
+    color: #FEF2BF;
+  }
+}
+
+@media (min-width: 319px) and (max-width: 480px) {
+  body {
+    background-color: lightsalmon;
+  }
+}
