--- a/styles.css
+++ b/styles.css
@@ -64,15 +64,59 @@ body {
  border: 8px solid black;
 
 }
+.info-icon{
+ 
+  color: rgb(241, 241, 241);
+    font-family: "Square Peg", cursive;
+    font-weight: 800;
+    font-style:normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   margin: 0;
+   padding: 0px;
+   gap: 2px;
+   transition: 2s;
+}
+.infosvg{
+ height: 40px;
+ width: 40px;
+ border-radius: 60px;
+ cursor: pointer;
+}
+.notes{
+background-color: #fffae6;
+padding: 10px;
+width: 80%;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+border: 8px solid black;
+border-radius: 15px;
+position: absolute;
+left: 160px;
+display: none;
+}
 
 
+@media (min-width: 412px) and (max-width: 1200px) {
 
-@media (min-width: 481px) and (max-width: 1200px) {
+  .container {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    margin-top: 500px;
+    
+  }
+  .notes{
+
+    width: 40%;
+
+    display: none;
+    }
   .btn {
-    margin: 18px;
+    margin: 15px;
     display: inline-block;
-    height: 120px;
-    width: 120px;
+    height: 210px;
+    width: 210px;
     border: 10px solid black;
     border-radius: 20%;
   }
@@ -80,10 +124,10 @@ body {
 
     border: none;
     background-color: rgb(163, 106, 0);
-    padding: 10px;
-    border-radius: 10px;
+    padding: 40px;
+    border-radius: 20px;
     font-family: 'Press Start 2P', cursive;
-    font-size: 0.5rem;
+    font-size: 1rem;
     border: 8px solid black;
   }   
 
@@ -95,8 +139,3 @@ body {
   }
 }
 
-@media (min-width: 319px) and (max-width: 480px) {
-  body {
-    background-color: lightsalmon;
-  }
-}
